前端修改小bug（积压金额）

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -447,6 +447,7 @@
                         </table>
                     </div>
                     <div class="padding">
+                        <table class="table table-hover" id="wareStockPrice">
 、                            <tr><td>仓库ID</td><td>积压资金额</td></tr>
                         </table>
                     </div>
