解决多次点击修改表格多次划分问题

--- a/src/main/webapp/newGoodsList.html
+++ b/src/main/webapp/newGoodsList.html
@@ -32,6 +32,7 @@
   <!--    修改货物：注入代码-->
   <script>
     function change(id){
+      $("#changeArea").html('');
       let insertHTML = `<div class="panel panel-default" id="addCustomer">
 
                     <div class="panel-body">
