销售功能部分bug修复

--- a/src/main/webapp/newCreateSellOrder.html
+++ b/src/main/webapp/newCreateSellOrder.html
@@ -36,7 +36,6 @@
             var wareId = $("#wareId").val();
             var customerId = $("#customerId").val();
             var remark = $("#remark").val();
-            alert(status);
             var goodsId = '';
             var price = '';
             var number = '';
@@ -362,7 +361,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="wareId">仓库ID</label>
-                                    <input type="text" class="form-control" id="wareId" onchange="alert('1111')">
+                                    <input type="text" class="form-control" id="wareId">
                                 </div>
                                 <div class="form-group">
                                     <label for="customerId">顾客ID</label>
