--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -453,7 +453,7 @@
                         <table class="table table-hover" id="wareStockPrice">
 、                            <tr><td>仓库ID</td><td>积压资金额</td></tr>
                         </table>
-                    </div>
+                    </div>A.
                 </div>
                 <div class="col-md-6">
                     <div class="padding">
