--- a/src/main/webapp/newCustomerList.html
+++ b/src/main/webapp/newCustomerList.html
@@ -119,6 +119,7 @@
                         var status = list[i].status;
                         var jifen = list[i].customerIntegral;
                         var yucunkuan = list[i].preDeposit;
+                        var debt = list[i].debt;
                         console.log(list[i]);
                         if (status === 0) {
                             var printStatus = '批发';
@@ -126,8 +127,8 @@
                             var printStatus = '零售';
                         }
 
-                        let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td>
-                            <td id="${'status' + id}">${printStatus}</td><td>${jifen}</td><td>${yucunkuan}</td><td>`;
+                        let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td>
+                            <td id="${'status' + id}">${printStatus}</td><td>${jifen}</td><td>${yucunkuan}</td><td>${debt}</td><td>`;
                         if(sellOrders !== null){
                             insert += `<table>`;
                             for (var j = 0; j <sellOrders.length; j++){
@@ -509,7 +510,7 @@
                         <div class="table-responsive">
                             <table class="table table-striped b-t b-b">
                                 <thead>
-                                <tr><th>客户姓名</th><th>联系方式</th><th>状态</th><th>积分</th><th>预存款</th><th>购买历史信息</th><th>操作</th></tr>
+                                <tr><th>客户ID</th><th>客户姓名</th><th>联系方式</th><th>状态</th><th>积分</th><th>预存款</th><th>欠款</th><th>购买历史信息</th><th>操作</th></tr>
                                 </thead>
                                 <tbody id="table">
                                 </tbody>
