--- a/src/main/webapp/newUnexaminedList.html
+++ b/src/main/webapp/newUnexaminedList.html
@@ -43,6 +43,7 @@
                         location.reload();
                     } else {
                         alert("操作失败！");
+                        location.reload();
                     }
 
                 },
